--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     :root {
       --primary: #3b82f6;
       --primary-light: #e5eafe;
-      --accent: #facc15;
-      --grey-bg: #566573;
       --white: #fff;
-      --card-text: #566573;
-      --text-white: #fff;
+      --gray: #f2f3f7;
+      --gray-dark: #e4e7ee;
+      --text: #181a1e;
+      --text-light: #6b7280;
       --border-radius: 18px;
-      --box-shadow: 0 2px 32px 0 rgba(86,101,115,0.08), 0 1.5px 5px rgba(86,101,115,0.11);
+      --box-shadow: 0 2px 32px 0 rgba(59,130,246,0.05), 0 1.5px 5px rgba(59,130,246,0.10);
       --transition: 0.35s cubic-bezier(.4,0,.2,1);
     }
     * { box-sizing: border-box; }
     html { scroll-behavior: smooth; }
     body {
       font-family: 'Poppins', sans-serif;
-      color: var(--text-white);
-      background: var(--grey-bg);
+      color: var(--text);
+      background: var(--gray);
       margin: 0;
       padding: 0;
       min-height: 100vh;
@@ -38,8 +38,8 @@
       align-items: center;
       justify-content: space-between;
       padding: 1.5rem 7vw;
-      background: var(--grey-bg);
-      box-shadow: 0 2px 16px rgba(0,0,0,0.07);
+      background: var(--white);
+      box-shadow: 0 2px 16px rgba(59,130,246,0.03);
       position: sticky; top: 0; z-index: 50;
     }
     .logo {
@@ -57,7 +57,7 @@
     .nav-links a {
       font-weight: 500;
       font-size: 1.08rem;
-      color: #cfd8dc;
+      color: var(--text-light);
       transition: color var(--transition);
       position: relative;
       padding: 0.3rem 0;
@@ -120,18 +120,17 @@
       letter-spacing: -1.5px;
       line-height: 1.13;
       animation: fadeInDown 1.1s;
-      text-shadow: 0 2px 10px rgba(0,0,0,0.08);
     }
     .hero-subtext {
       font-size: 1.27rem;
+      color: var(--text);
       font-weight: 600;
       margin-bottom: 0.7rem;
       animation: fadeInDown 1.4s;
-      color: var(--text-white);
     }
     .hero-desc {
       font-size: 1rem;
-      color: #eaf1f3;
+      color: var(--text-light);
       margin-bottom: 1.55rem;
       line-height: 1.6;
       animation: fadeInDown 1.7s;
@@ -213,15 +212,15 @@
       box-shadow: 0 8px 36px rgba(59,130,246,0.11);
     }
     .why-card .icon {
-      font-size: 2.7rem; margin-bottom: 1.05rem; transition: transform var(--transition); color: var(--primary)
+      font-size: 2.7rem; margin-bottom: 1.05rem; transition: transform var(--transition);
     }
     .why-card:hover .icon { transform: scale(1.18) rotate(-6deg); }
     .why-card .card-title {
-      font-size: 1.15rem; font-weight: 700; color: var(--card-text);
+      font-size: 1.15rem; font-weight: 600; color: var(--primary);
       margin-bottom: 0.55rem; text-align: center;
     }
     .why-card .card-desc {
-      font-size: 0.98rem; color: var(--card-text); text-align: center; font-weight: 400;
+      font-size: 0.98rem; color: var(--text-light); text-align: center;
     }
     /* How it works */
     .how-cards {
@@ -244,10 +243,10 @@
     }
     .how-card.visible { opacity: 1; transform: none; }
     .how-card .icon {
-      font-size: 2.5rem; margin-bottom: 0.88rem; color: var(--primary)
+      font-size: 2.5rem; margin-bottom: 0.88rem; color: var(--primary);
     }
     .how-card .step-title {
-      font-size: 1.03rem; font-weight: 600; margin-bottom: 0.5rem; text-align: center; color: var(--card-text)
+      font-size: 1.03rem; font-weight: 600; margin-bottom: 0.5rem; text-align: center;
     }
     /* Flexible Learning Options */
     .flex-cards {
@@ -274,10 +273,10 @@
       box-shadow: 0 8px 36px rgba(59,130,246,0.13);
     }
     .flex-card .flex-title {
-      font-size: 1.13rem; font-weight: 700; color: var(--card-text); margin-bottom: 0.5rem;
+      font-size: 1.13rem; font-weight: 600; color: var(--primary); margin-bottom: 0.5rem;
     }
     .flex-card .flex-desc {
-      font-size: 1.01rem; color: var(--card-text); margin-bottom: 1.3rem; min-height: 48px; font-weight: 400;
+      font-size: 1.01rem; color: var(--text-light); margin-bottom: 1.3rem; min-height: 48px;
     }
     .flex-card .flex-btn {
       background: var(--primary);
@@ -292,7 +291,6 @@
       box-shadow: 0 3px 12px rgba(59,130,246,0.09);
       margin-bottom: 0.15rem;
       align-self: flex-start;
-      letter-spacing: 0.01em;
     }
     .flex-card .flex-btn:hover {
       background: #2563eb;
@@ -302,9 +300,8 @@
     .flex-cards .flex-card:nth-child(2) { animation-delay: 0.3s;}
     .flex-cards .flex-card:nth-child(3) { animation-delay: 0.45s;}
     .flex-subtext {
-      font-size: 0.99rem; color: #566573; margin: 1.4rem 0 0.5rem 0;
-      font-style: italic; text-align: center; display: block; width: 100%; font-weight: 500;
-      background: #fff; border-radius: 12px; padding: 0.6em 0 0.6em 0;
+      font-size: 0.99rem; color: var(--text-light); margin: 1.4rem 0 0.5rem 0;
+      font-style: italic; text-align: center; display: block; width: 100%;
     }
     /* Vision & Mission */
     .vm-section {
@@ -318,13 +315,13 @@
     .vm-section .vm-title {
       font-size: 1.14rem;
       font-weight: 700;
-      color: var(--card-text);
+      color: var(--primary);
       margin-bottom: 1.1rem;
       text-transform: uppercase;
       letter-spacing: 0.09em;
     }
     .vm-section .vm-quote {
-      font-size: 1.07rem; color: var(--card-text); font-style: italic; margin-bottom: 0.8rem; font-weight: 400;
+      font-size: 1.07rem; color: var(--text-light); font-style: italic; margin-bottom: 0.8rem;
     }
     /* Who It's For */
     .who-grid {
@@ -346,8 +343,8 @@
       min-width: 90px;
       max-width: 170px;
       transition: box-shadow var(--transition), transform var(--transition);
-      font-weight: 700;
-      color: var(--card-text);
+      font-weight: 600;
+      color: var(--primary);
       font-size: 1.07rem;
       cursor: default;
       position: relative;
@@ -382,7 +379,7 @@
     }
     .different-col .col-title {
       font-size: 1.09rem;
-      font-weight: 800;
+      font-weight: 700;
       color: var(--primary);
       margin-bottom: 1.1rem;
       text-align: left;
@@ -392,7 +389,7 @@
       margin: 0;
     }
     .different-col ul li {
-      color: var(--card-text);
+      color: var(--text-light);
       font-size: 0.98rem;
       margin-bottom: 0.7em;
       list-style: disc inside;
@@ -405,7 +402,7 @@
       display: none;
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.20);
+      background: rgba(59,130,246,0.10);
       justify-content: center;
       align-items: center;
       z-index: 9999;
@@ -430,7 +427,7 @@
       position: absolute;
       top: 15px; right: 15px;
       font-size: 1.5rem;
-      color: var(--card-text);
+      color: var(--text-light);
       background: none;
       border: none;
       cursor: pointer;
@@ -440,7 +437,7 @@
     .modal-close:hover { color: var(--primary);}
     .modal h2 {
       font-size: 1.18rem;
-      font-weight: 800;
+      font-weight: 700;
       text-align: center;
       margin-bottom: 1.1rem;
       color: var(--primary);
@@ -453,7 +450,7 @@
     }
     .modal label {
       font-weight: 600;
-      color: var(--card-text);
+      color: var(--text);
       font-size: 0.96rem;
       margin-bottom: 0.18rem;
     }
@@ -468,7 +465,6 @@
       resize: none;
       margin-bottom: 0.02rem;
       transition: border-color 0.2s;
-      color: var(--card-text);
     }
     .modal input:focus, .modal select:focus, .modal textarea:focus {
       border-color: var(--primary);
@@ -505,7 +501,7 @@
     footer {
       margin-top: 2.7rem;
       padding: 2.1rem 7vw 1.1rem 7vw;
-      background: var(--grey-bg);
+      background: var(--white);
       text-align: center;
       border-top-left-radius: 22px;
       border-top-right-radius: 22px;
@@ -536,7 +532,7 @@
       transition: background var(--transition), color var(--transition), transform var(--transition);
     }
     .footer-social a:hover { background: var(--primary); color: #fff; transform: scale(1.11);}
-    .footer-text { color: #eaf1f3; font-size: 0.99rem; margin-top: 0.35rem; letter-spacing: 0.01em;}
+    .footer-text { color: var(--text-light); font-size: 0.99rem; margin-top: 0.35rem; letter-spacing: 0.01em;}
     /* Responsive */
     @media (max-width: 950px) {
       header {
@@ -574,8 +570,8 @@
         position: absolute;
         top: 62px;
         right: 3vw;
-        background: var(--grey-bg);
-        box-shadow: 0 8px 32px rgba(86,101,115,0.13);
+        background: var(--white);
+        box-shadow: 0 8px 32px rgba(59,130,246,0.08);
         border-radius: 12px;
         flex-direction: column;
         gap: 1.07rem;
@@ -654,7 +650,7 @@
     <section class="section fade-scroll" id="why">
       <div class="section-title-row">
         <svg viewBox="0 0 56 56"><ellipse cx="28" cy="28" rx="26" ry="20" fill="#f2f3f7"/><ellipse cx="20" cy="26" rx="7" ry="8" fill="#fff"/><ellipse cx="36" cy="30" rx="7" ry="8" fill="#fff"/><ellipse cx="28" cy="34" rx="6" ry="7" fill="#e4e7ee"/></svg>
-        <h2 style="font-size:1.4rem;font-weight:800;color:var(--primary);margin:0;text-align:left;">Why SwapEra?</h2>
+        <h2 style="font-size:1.4rem;font-weight:700;color:var(--primary);margin:0;text-align:left;">Why SwapEra?</h2>
       </div>
       <div class="why-cards">
         <div class="why-card">
@@ -678,7 +674,7 @@
     <section class="section fade-scroll" id="how">
       <div class="section-title-row">
         <svg viewBox="0 0 48 48"><ellipse cx="24" cy="24" rx="22" ry="15" fill="#e4e7ee"/><ellipse cx="17" cy="22" rx="6" ry="7" fill="#fff"/><ellipse cx="31" cy="26" rx="6" ry="7" fill="#fff"/></svg>
-        <h2 style="font-size:1.33rem;font-weight:800;color:var(--primary);margin:0;text-align:left;">How It Works</h2>
+        <h2 style="font-size:1.33rem;font-weight:700;color:var(--primary);margin:0;text-align:left;">How It Works</h2>
       </div>
       <div class="how-cards" id="howCards">
         <div class="how-card">
@@ -703,16 +699,16 @@
     <section class="section fade-scroll" id="flexible">
       <div class="section-title-row">
         <svg viewBox="0 0 48 48"><ellipse cx="24" cy="24" rx="22" ry="14" fill="#f2f3f7"/><ellipse cx="28" cy="17" rx="5" ry="5.5" fill="#fff"/><ellipse cx="18" cy="29" rx="7" ry="6" fill="#e4e7ee"/></svg>
-        <h2 style="font-size:1.30rem;font-weight:800;color:var(--primary);margin:0;text-align:left;">Flexible Learning Options</h2>
+        <h2 style="font-size:1.30rem;font-weight:700;color:var(--primary);margin:0;text-align:left;">Flexible Learning Options</h2>
       </div>
       <div class="flex-cards">
         <div class="flex-card">
-          <div class="flex-title">Swap Skills Freely <span style="font-size:0.92em; background:#fee; color:#facc15; border-radius:9px; padding:0.1em 0.7em; margin-left:0.4em; font-weight:800;">Most Popular</span></div>
+          <div class="flex-title">Swap Skills Freely <span style="font-size:0.92em; background:#fee; color:#facc15; border-radius:9px; padding:0.1em 0.7em; margin-left:0.4em; font-weight:600;">Most Popular</span></div>
           <div class="flex-desc">Teach what you know and learn what you want — for free.</div>
           <button class="flex-btn" onclick="openModal()">Start Swapping</button>
         </div>
         <div class="flex-card">
-          <div class="flex-title">Learn from Verified Trainers <span style="font-size:0.89em; background:#e0f2fe; color:#06b6d4; border-radius:8px; padding:0.08em 0.6em; margin-left:0.4em; font-weight:800;">Optional</span></div>
+          <div class="flex-title">Learn from Verified Trainers <span style="font-size:0.89em; background:#e0f2fe; color:#06b6d4; border-radius:8px; padding:0.08em 0.6em; margin-left:0.4em; font-weight:600;">Optional</span></div>
           <div class="flex-desc">Want structured sessions? Book trainers for paid sessions in UI/UX, Excel, Yoga & more.</div>
           <button class="flex-btn" onclick="openModal()">Explore Trainers</button>
         </div>
@@ -739,7 +735,7 @@
     <section class="section fade-scroll" id="who">
       <div class="section-title-row">
         <svg viewBox="0 0 48 48"><ellipse cx="24" cy="24" rx="22" ry="13" fill="#e4e7ee"/><ellipse cx="15" cy="19" rx="7" ry="7" fill="#fff"/><ellipse cx="33" cy="28" rx="7" ry="7" fill="#fff"/></svg>
-        <h2 style="font-size:1.23rem;font-weight:800;color:var(--primary);margin:0;text-align:left;">Who is SwapEra For?</h2>
+        <h2 style="font-size:1.23rem;font-weight:700;color:var(--primary);margin:0;text-align:left;">Who is SwapEra For?</h2>
       </div>
       <div class="who-grid">
         <div class="who-card"><span class="icon">🎓</span>Students</div>
@@ -754,7 +750,7 @@
     <section class="section fade-scroll">
       <div class="section-title-row">
         <svg viewBox="0 0 48 48"><ellipse cx="24" cy="24" rx="22" ry="14" fill="#f2f3f7"/><ellipse cx="28" cy="17" rx="5" ry="5.5" fill="#fff"/><ellipse cx="18" cy="29" rx="7" ry="6" fill="#e4e7ee"/></svg>
-        <h2 style="font-size:1.23rem;font-weight:800;color:var(--primary);margin:0;text-align:left;">What Makes SwapEra Different</h2>
+        <h2 style="font-size:1.23rem;font-weight:700;color:var(--primary);margin:0;text-align:left;">What Makes SwapEra Different</h2>
       </div>
       <div class="different-section">
         <div class="different-col">
